# focus-pixel-tool

./: .gitattributes  .gitignore  README.md  config.h.in  meson.build
data/: resources.xml
data/ui/: app-menu.xml
src/: debug.h  main.c
src/ui/: about.c  about.h  mainwindow.c  mainwindow.h
